--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.456.0",
+    "mongodb": "6.11",
     "next": "14.2.15",
     "next-auth": "^5.0.0-beta.25",
     "react": "^18",
