--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "antd": "^5.21.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "html-react-parser": "^5.1.18",
     "lucide-react": "^0.456.0",
     "mongodb": "6.11",
     "next": "14.2.15",
