--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@clerk/localizations": "^3.9.5",
     "@clerk/nextjs": "^6.9.6",
+    "@headlessui/react": "^2.2.0",
+    "@heroicons/react": "^2.2.0",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
@@ -20,6 +22,7 @@
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.2",
+    "@stripe/stripe-js": "^5.4.0",
     "@supabase/supabase-js": "^2.46.1",
     "antd": "^5.21.4",
     "class-variance-authority": "^0.7.0",
@@ -31,6 +34,7 @@
     "next-auth": "^5.0.0-beta.25",
     "react": "^18",
     "react-dom": "^18",
+    "stripe": "^17.5.0",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
